# python-api-yazma

./: .gitignore  README.md  contacts.json  requirements.txt
flaskdeneme/: app.py  veritabanı.json
my_flask_app/: app.py  contacts.json  pyproject.toml
my_flask_app/static/js/: script.js
my_flask_app/templates/: index.html
