[tool.poetry]
name = "my-flask-app"
version = "0.1.0"
description = "flask ile api oluşturulmuş bir todo app uygulaması"
authors = ["Haticenur Akdag <haticenurakdag5@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_flask_app"}]

[tool.poetry.dependencies]
python = "^3.8"
request2 = "^0.2"
jsonify = "^0.5"
template-render = "^0.1.0"
JSON4JSON = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
